--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular-devkit/build-angular": "^17.0.6",
     "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "^17.0.0",
+    "@ngrx/signals": "^17.0.1",
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.5",
